k8s/session 14/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          emptyDir: {}

###kubectl create namespace test-namespace
###kubectl run -it --rm --restart=Never pg-client --image=postgres:13 --namespace=test-namespace -- bash

#####psql -h postgres-service.default.svc.cluster.local -U myuser -d mydatabase
