k8s/session 14/externalIp.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-external-ip-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  externalIPs:
    - 203.0.113.1
